--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">calculator</string>
-    <string name="c">c</string>
+    <string name="c">C</string>
     <string name="_9">9</string>
     <string name="_4">4</string>
     <string name="_5">5</string>
